# BasicPlus

./: .gitignore  BpVM.cfg  LICENSE  README.es.md  README.md  basicplus_grammar.ebnf.txt  bpide.bat  pm_grammar_ebnf.txt  readme.txt
BpIde/: nbactions.xml  pom.xml
bpdevices/: Ad7177.bp  Ad7177.bpi  Ad7177.dbg  Ad7177.mod  Bme688.bp  Bme688.bpi  Bme688.dbg  Bme688.mod  Bmp280.bp  Bmp280.bpi  Bmp280.dbg  Bmp280.mod  Mcp9804.bp  Mcp9804.bpi  Mcp9804.dbg  Mcp9804.mod  Pca9554.bp  Pca9554.bpi  Pca9554.dbg  Pca9554.mod
bpgenvm-c/: .gitignore  Makefile  README.md  bench_cpu.ps1  bench_startup.ps1  measure_mem.ps1
bpgenvm-c/esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  wire_test.py
bpgenvm-c/esp32/main/: CMakeLists.txt  esp32_mods.c  esp32_mods.h  fs.h  fs_ram.c  gpio_esp32.c  hello_mod.c  hw_esp32.h  json_min.c  main.c  platform_esp32.c  repl_esp32.c  repl_esp32.h  wire_v1.c  wire_v1.h
bpgenvm-c/esp32p4/: CMakeLists.txt  HelloP4.bp  OOTestP4.bp  StressP4.bp  partitions.csv  partitions_32m.csv  pc_logserver.py  sdkconfig.defaults
bpgenvm-c/esp32p4-ws/: CMakeLists.txt  sdkconfig.defaults
bpgenvm-c/esp32p4-ws/main/: CMakeLists.txt  gui_display_dsi.c  idf_component.yml  main.c
bpgenvm-c/esp32p4/main/: CMakeLists.txt  gui_display_dsi.c  gui_display_dsi.h  hello_mod.c  idf_component.yml  main.c  p4_board_id.c  p4_board_id.h  p4_mods.c  p4_mods.h  wire_v1_tcp.c  wire_v1_tcp.h
bpgenvm-c/include/: bpvm.h  bpvm_adc.h  bpvm_comm.h  bpvm_fs.h  bpvm_gpio.h  bpvm_gui.h  bpvm_i2c.h  bpvm_internal.h  bpvm_neopixel.h  bpvm_net.h  bpvm_opcodes.h  bpvm_pico.h  bpvm_platform.h  bpvm_pulse.h  bpvm_pwm.h  bpvm_rtc.h  bpvm_smp.h  bpvm_spi.h  bpvm_uart.h  bpvm_wdt.h  crc32.h  lv_conf.h  mdn_loader.h
bpgenvm-c/pico/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  adc_mod.c  aot_Bench.c  aot_funcs.c  aot_funcs.h  bench.c  bench.h  board_desc.c  board_desc.h  build_mdn.sh  comm_pico.c  core_mod.c  embedded_bench_mdn.c  embedded_bench_mdn.h  embedded_mods.h  flash_lock.c  flash_lock.h  fs.c  fs.h  gpio_mod.c  hello_mod.c  i2c_mod.c  json_min.h  log.c  log.h  main.c  mdn_loader.c  mdn_loader.h  neopixel.c  neopixel.h  neopixel_mod.c  pico_mod.c  platform_freertos.c  psram.c  psram.h  pulse_mod.c  pwm_mod.c  (+11 more)
bpgenvm-c/pico/boards/: README.md  metro-rp2350b.json  pico2.json
bpgenvm-c/pico/scripts/: bpvm-pico.py  regen_pico_mods.sh
bpgenvm-c/pico/sdk_board/: bp_rp2350b.h
bpgenvm-c/samples/: Arith.bpi  Arith.dbg  Arith.mod  BridgeApp.bp  BridgeLib.bp  ByteApp.bp  ByteLib.bp  ByteNat.bp  CharAt.bpi  CharAt.dbg  CharAt.mod  CompressBench.bp  CompressNat.bp  Concat.bpi  Concat.dbg  Concat.mod  CounterSample.bpi  CounterSample.dbg  CounterSample.mod  GcLong.bp  GcMisalign2.bp  GcObjAlign.bp  GcRoot.bp  Hello.bpi  Hello.dbg  Hello.mod  Helper.bp  KillLoop.bp  KillSleep.bp  L2Lib.bpi  L2Lib.dbg  L2Lib.mod  L2v3App.bpi  L2v3App.dbg  L2v3App.mod  L2v3Sigs.dbg  L2v3SigsUse.bpi  L2v3SigsUse.dbg  L2v3SigsUse.mod  L2v3Statics.bpi  (+55 more)
bpgenvm-c/scripts/: regen_all_mods.sh
bpgenvm-c/src/: adc.c  aot_registry.c  aot_registry.h  bpvm.c  bpvm_aot_helpers.c  bpvm_aot_helpers.h  bpvm_neopixel.c  builtins.c  comm_common.c  comm_host.c  comm_queue.h  crc32.c  exceptions.c  fs_facade.c  fs_host.c  gpio.c  gui.c  gui_display_sdl.c  heap.c  i2c.c  interp.c  link.c  loader.c  mdn_format.h  mdn_loader.c  net.c  net_host.c  pico.c  platform_pthread.c  pulse.c  pwm.c  rtc.c  scheduler.c  scheduler_smp.c  spi.c  threading.c  uart.c  wdt.c
bpgenvm-c/st7701_probe/: CMakeLists.txt  sdkconfig.defaults
bpstdlib/: Adc.bp  Adc.bpi  Adc.dbg  Adc.mod  Adc.slots  App.bp  App.bpi  App.dbg  App.mod  Collections.bp  Collections.bpi  Collections.dbg  Collections.mod  Collections.slots  Compress.bp  Compress.bpi  Compress.dbg  Compress.mod  Core.bp  Core.dbg  Core.mod  Core.slots  Freq.bp  Freq.bpi  Freq.dbg  Freq.mod  Freq.slots  Gpio.bp  Gpio.bpi  Gpio.dbg  Gpio.mod  Gpio.slots  Gui.bp  Gui.bpi  Gui.dbg  Gui.mod  Gui.slots  I2c.bp  I2c.bpi  I2c.dbg  (+81 more)
compat/: README.md  compat.sh
docs/: AOT_CROSS_MODULE.md  AOT_HYBRID_REFLECTION.md  BENCHMARKS.md  BPVM_WIRE_PROTOCOL.md  BUILTINS.md  Basic Plus desde dentro.docx  BpBuild.example  BpProject.example  BpVM.cfg.example  FS_AUDIT.md  H14_TEST_PLAN.md  H2_SMP_REFLECTION.md  H6_TASKS.md  H7_TASKS.md  H8_TASKS.md  H9_TASKS.md  HEAP_LAYOUT.md  HECHO_V1.md  HECHO_V2.md  HW_CLASS_POLICY.md  IDE_TASKS.md  INSTALAR_FIRMWARE.md  MOD_FORMAT.md  OPCODES.md  PENDIENTES.md  PHILOSOPHY.md  PROJECT_ROADMAP.md  PUBLICAR.md  QUICKSTART.md  RELEASES.md  SMP_ARCH.md  V2_BACKLOG.md  V2_ROADMAP.md  V3_BACKLOG.md  V3_IDEAS.md  V3_ROADMAP.md  V3_TEST_BATCH.md  V4_BACKLOG.md  WIFI_TCP_REFLECTION.md  bp-desde-dentro.html  (+7 more)
generador/: pom.xml
h3bench/: NOTAS.md  churnbig.bp  fragmixed.bp  fragreal.bp  fragsurv.bp  gccorrect.bp  gccorrectc.bp  heaptest.bp
lexer/: Ast.cs  AstPrinter.cs  BasicPlus.Lexer.csproj  BpType.cs  IlEmitter.cs  Lexer.cs  LexerError.cs  Parser.cs  ParserError.cs  Program.cs  README.md  SemanticAnalyzer.cs  SemanticDiagnostic.cs  SemanticInfo.cs  Symbols.cs  Token.cs  TokenType.cs  lexer.sln  smoke_test.py  structure_check.py
lexer-java/: README.md  nbactions.xml  pom.xml
miVM/: Aritmetica.mod  ArrDemo.mod  BitsDemo.mod  Cliente.mod  DataDemo.mod  DemoOps.mod  FloatDemo.mod  GCDemo.mod  NOTAS_FIX.md  NarrowDemo.mod  OOPDemo.mod  PropDemo.mod  nbactions.xml  pom.xml
samples/: AdcDemo.bp  BadSyntax.bp  Bench.bp  BlinkStm32.bp  Bme280IdP4.bp  Bme280Read_Esp32.bp  Bme688Demo.bp  Bme688Parity.bp  Bme688Spi.bp  Bme688SpiId.bp  Bme688SpiId_Esp32.bp  Bme688SpiId_Nucleo.bp  Bme688Spi_Esp32.bp  Bme688Spi_Nucleo.bp  Bmp280Demo.bp  Bmp280Id_Esp32.bp  Bmp280Id_Nucleo.bp  Bmp280Read_Nucleo.bp  BoardTest.bp  BreadcrumbDemo.bp  BusBug.bp  CatchMutex.bpi  CatchMutex.dbg  CatchMutex.mod  CatchNative.bpi  CatchNative.dbg  CatchNative.mod  CompoundTest.bp  CompressFileTest.bp  CompressRoundTrip.bp  CompressTest.bp  ConcatObjTest.bp  DblFmtTest.bp  DefApp.bp  DefLib.bp  DefaultParams.bp  DefaultParamsBad.bp  DefaultParamsClass.bp  ExcCatchTest.bp  ExcLib.bp  (+202 more)
(+344 files in other folders)
